# CompilerEng

./: .gitignore  CMakeLists.txt  CopyCompiler.bat  MIECCompiler.vcxproj  MIECCompiler.vcxproj.filters  README.md  README.txt  SymbolTable.cpp  SymbolTable.h  doxyfile  runTestfiles.bat  runTestfiles.sh
Coco/: Parser.frame
CocoLinux/: Scanner.frame
MiniIEC/: CodeGenAdapter.cpp  CodeGenAdapter.h  DacHelper.cpp  DacHelper.h  MIEC.atg  NextUseCalc.cpp  NextUseCalc.h  Object.h  Parser.cpp  Parser.h  RegisterAdmin.cpp  RegisterAdmin.h  Scanner.cpp  SymbolFactory.cpp  SymbolFactory.h  SymbolHelper.h  SymbolTable.cpp  SymbolTable.h  TestSymbolTable.cpp  main.cpp
MiniIEC/CodeGen/: CodeGen.h  CodeGenRISCV.cpp  CodeGenRISCV.h
MiniIEC/Symbols/: ConstSymbol.cpp  ConstSymbol.h  Symbol.cpp  Symbol.h  TypeSymbol.cpp  TypeSymbol.h  VarSymbol.cpp  VarSymbol.h
MiniIEC/Types/: ArrayType.h  BaseType.cpp  BaseType.h  StringType.h  StructType.h  Type.h  TypeKind.h
MiniIEC/dac/: Entry.cpp  Entry.h  Generator.cpp  Generator.h  OpKind.h
MiniIEC/dac/Operands/: DacOperand.cpp  DacOperand.h  Operand.h  SymbolOperand.cpp  SymbolOperand.h
MiniIEC/lib/: Singelton.h  concepts.h  helper.cpp  helper.h
SG_tests/: arithmetics.miec  basic_loop.miec  boolean_operators.miec  decrement.miec  if_else.miec  increment.miec  mixed_operations.miec  nested_if.miec  print_statement.miec  variable_declaration.miec  xfail_division_by_zero.miec  xfail_duplicate_variable.miec  xfail_invalid_syntax.miec  xfail_invalid_variable.miec  xfail_missing_begin.miec  xfail_missing_begin_var.miec  xfail_missing_end.miec  xfail_missing_semicolon.miec  xfail_unknown_identifier.miec
TestDokumente/: input1.miec
TestInput/: input0.miec  input1.miec  input1If.miec  input1While.miec  input2.miec  t1.miec  t2.miec  t3.miec  t4.miec  t5.miec  xfail_progWrong.miec
TestInput/failed/: fail_unkownItem.miec  xfail_Fehler_noVar.miec  xfail_Fehler_nodec.miec  xfail_Mult.miec  xfail_ProgramError.miec  xfail_TestDivByZero.miec  xfail_empty.miec  xfail_fail_assignment.miec
TestInput/failed/Berger_Pfeifer/: xfail_Error.miec  xfail_Errors.miec  xfail_Hello2.miec
TestInput/failed/double_declaration/: xfail_miecTestDoubleDecare.miec
TestInput/ok/: input0.miec  input2.miec  multiplication.miec
TestInput/ok/arithmetic_operations/: ArithLong.miec  DuplicateConst.miec  Multiplication.miec  TestDivide.miec  arit.miec
TestInput/ok/if/: NestedLoopIf.miec  if.miec
TestInput/ok/mixed/: BigTest.miec  fibonacci.miec
TestInput/ok/while/: while.miec  whileTest.miec
html/: CodeGenAdapter_8cpp.html  CodeGenAdapter_8cpp__incl.map  CodeGenAdapter_8cpp__incl.md5  CodeGenAdapter_8h.html  CodeGenAdapter_8h__dep__incl.map  CodeGenAdapter_8h__dep__incl.md5  CodeGenAdapter_8h__incl.map  CodeGenAdapter_8h__incl.md5  CodeGenAdapter_8h_source.html  DacHelper_8cpp.html  DacHelper_8cpp__incl.map  DacHelper_8cpp__incl.md5  DacHelper_8h.html  DacHelper_8h__dep__incl.map  DacHelper_8h__dep__incl.md5  DacHelper_8h__incl.map  DacHelper_8h__incl.md5  DacHelper_8h_source.html  NextUseCalc_8cpp.html  NextUseCalc_8cpp__incl.map  NextUseCalc_8cpp__incl.md5  NextUseCalc_8h.html  NextUseCalc_8h__dep__incl.map  NextUseCalc_8h__dep__incl.md5  NextUseCalc_8h__incl.map  NextUseCalc_8h__incl.md5  NextUseCalc_8h_source.html  Object_8h.html  Object_8h__dep__incl.map  Object_8h__dep__incl.md5  Object_8h_source.html  Parser_8cpp.html  Parser_8cpp__incl.map  Parser_8cpp__incl.md5  Parser_8h.html  Parser_8h__dep__incl.map  Parser_8h__dep__incl.md5  Parser_8h__incl.map  Parser_8h__incl.md5  Parser_8h_source.html  (+262 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  (+49 more)
tests/: DacHelperTest.cpp  NextUseCalcTest.cpp  RegisterAdminTest.cpp
tests/dac/: GeneratorTest.cpp
tests/lib/: helperTest.cpp
